--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.4.20",
+    "eslint": "^8.57.1",
+    "eslint-config-next": "^15.3.3",
     "postcss": "^8.4.31",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
